[gd_scene format=3 uid="uid://caom1rhv8v7q6"]

[ext_resource type="Texture2D" uid="uid://c16q4ttn6cmrm" path="res://icon.svg" id="1_77wj2"]
[ext_resource type="Script" uid="uid://nn5mjgohfge5" path="res://script/world/achievement_panel.gd" id="1_um5p3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_um5p3"]
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 0.43529412)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9169027, 0.79015326, 0.39515385, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[node name="AchievementPanel" type="Panel" unique_id=926509568]
offset_top = 2.0
offset_right = 120.0
offset_bottom = 61.0
theme_override_styles/panel = SubResource("StyleBoxFlat_um5p3")
script = ExtResource("1_um5p3")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1794233810]
position = Vector2(60, 18)
scale = Vector2(0.20703128, 0.21484378)
texture = ExtResource("1_77wj2")

[node name="TitleLabel" type="Label" parent="." unique_id=161702843]
layout_mode = 0
offset_left = -1.0
offset_top = -14.0
offset_right = 239.0
offset_bottom = 9.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 16
text = "achievement title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="." unique_id=1651142969]
layout_mode = 0
offset_top = 38.0
offset_right = 238.0
offset_bottom = 61.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 16
text = "example title description"
horizontal_alignment = 1
vertical_alignment = 1
